added package json file

--- a/index.html
+++ b/index.html
@@ -69,6 +69,7 @@
         </div>
         <button class="btn yellow darken-2 z-depth-0">Login</button>
       </form>
+      <p id="feedback-msg" class="text-red"></p>
     </div>
   </div>
   <!-- ACCOUNT MODAL -->
